--- a/about.html
+++ b/about.html
@@ -48,9 +48,16 @@
         </div>
 
     </div>
+    <!-- Chatbot Container -->
+<div class="chatbot-container">
+    <div class="chatbot-button">
+        <i class="fas fa-comment-medical"></i>
+    </div>
+</div>
+<!-- about section ends -->
 
 </section>
-<!-- about section ends -->
+
 
 
 <!-- footer section start -->
