--- a/admin_login.html
+++ b/admin_login.html
@@ -38,7 +38,9 @@
                 <button type="submit" class="btn">Login</button>
             </form>
         </div>
+<!-- about section ends -->
     </section>
+
 
     <!-- Footer Section -->
     <section class="footer">
