--- a/book.html
+++ b/book.html
@@ -51,6 +51,13 @@
         </form>
 
     </div>
+    <!-- Chatbot Container -->
+<div class="chatbot-container">
+    <div class="chatbot-button">
+        <i class="fas fa-comment-medical"></i>
+    </div>
+</div>
+<!-- about section ends -->
 
 </section>
 <!--  booking section ends -->
