--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <p>AN APPLE A DAY KEEPS THE DOCTOR AWAY.🍎</p>
         <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
     </div>
+    <!-- Chatbot Container -->
+<div class="chatbot-container">
+    <div class="chatbot-button">
+        <i class="fas fa-comment-medical"></i>
+    </div>
+</div>
+<!-- about section ends -->
 
 </section>
 <!-- home section ends -->
