--- a/reviews.html
+++ b/reviews.html
@@ -89,6 +89,13 @@
         </div>
 
     </div>
+    <!-- Chatbot Container -->
+<div class="chatbot-container">
+    <div class="chatbot-button">
+        <i class="fas fa-comment-medical"></i>
+    </div>
+</div>
+<!-- about section ends -->
 
 </section>
 
