--- a/services.html
+++ b/services.html
@@ -74,7 +74,13 @@
 
 
     </div>
-
+<!-- Chatbot Container -->
+<div class="chatbot-container">
+    <div class="chatbot-button">
+        <i class="fas fa-comment-medical"></i>
+    </div>
+</div>
+<!-- about section ends -->
 </section>
 <!-- service section ends -->
  <!-- icon section starts -->
