--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
     <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> medcare. </a>
 
     <nav class="navbar">
-        <a href="index.html">home</a>
-        <a href="services.html">services</a>
-        <a href="about.html">about</a>
-        <a href="doctors.html">doctors</a>
-        <a href="book.html">book</a>
-        <a href="reviews.html">review</a>
-        <a href="blogs.html">blog</a>
-        
-        <a href="login.html" class="btn">Login</a>
+        <a href="#home">home</a>
+        <a href="#services">services</a>
+        <a href="#about">about</a>
+        <a href="#doctors">doctors</a>
+        <a href="#book">book</a>
+        <a href="#review">review</a>
+        <a href="#blog">blog</a>
     </nav>
-
     <div id="menu-btn" class="fas fa-bars"></div>
 </header>
 
@@ -42,18 +39,11 @@
         <p>AN APPLE A DAY KEEPS THE DOCTOR AWAY.🍎</p>
         <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
     </div>
-    <!-- Chatbot Container -->
-<div class="chatbot-container">
-    <div class="chatbot-button">
-        <i class="fas fa-comment-medical"></i>
-    </div>
-</div>
-<!-- about section ends -->
 
 </section>
 <!-- home section ends -->
 <!-- icon section starts -->
-<!-- <section class="icons-container">
+<section class="icons-container">
 
     <div class="icons">
         <i class="fas fa-user-md"></i>
@@ -79,11 +69,11 @@
         <p>available hospitals</p>
     </div>
 
-</section> -->
+</section>
 
 <!-- icon section ends -->
 <!-- service section starts -->
-<!-- <section class="services" id="services">
+<section class="services" id="services">
 
     <h1 class="heading"> our <span>services</span> </h1>
 
@@ -125,10 +115,10 @@
 
     </div>
 
-</section> -->
+</section>
 <!-- service section ends -->
 <!-- about section starts -->
-<!-- <section class="about" id="about">
+<section class="about" id="about">
 
     <h1 class="heading"> <span>about</span> us </h1>
 
@@ -146,10 +136,10 @@
 
     </div>
 
-</section> -->
+</section>
 <!-- about section ends -->
 <!--  doctors section starts -->
-<!-- <section class="doctors" id="doctors">
+<section class="doctors" id="doctors">
 
     <h1 class="heading"> our <span>doctors</span> </h1>
 
@@ -224,11 +214,11 @@
 
     </div>
 
-</section> -->
+</section>
 
 <!--  doctors section ends -->
 <!--  booking section starts -->
-<!-- <section class="book" id="book">
+<section class="book" id="book">
 
     <h1 class="heading"> <span>book</span> now </h1>
 
@@ -249,10 +239,10 @@
 
     </div>
 
-</section> -->
+</section>
 <!--  booking section ends -->
 <!--  review section starts -->
-<!-- <section class="review" id="review">
+<section class="review" id="review">
 
     <h1 class="heading"> client's <span>review</span> </h1>
 
@@ -309,11 +299,11 @@
 
     </div>
 
-</section> -->
+</section>
 
 <!--  review section end -->
 <!--  blog section start -->
-<!-- <section class="blogs" id="blogs">
+<section class="blogs" id="blogs">
 
     <h1 class="heading"> our <span>blogs</span> </h1>
 
@@ -364,8 +354,8 @@
 
     </div>
 
-</section> -->
-<!--  blog section end --> 
+</section>
+<!--  blog section end -->
   <!-- footer section start -->
   <section class="footer">
 
