chatbot empty page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="#upload">Upload ECG</a>
         <a href="#about">About</a>
         <a href="#blog">Blog</a>
+        <a href="chatbot.html" class="btn"><i class="fas fa-heartbeat"></i> HealthGuard AI</a>
     </nav>
     <div id="menu-btn" class="fas fa-bars"></div>
 </header>
@@ -64,10 +65,11 @@
         </div>
 </section>
 
+
 <footer class="footer">
     <p>&copy; 2025 HeartGuard AI. All Rights Reserved.</p>
 </footer>
-<div id="chatbot-button" class="chatbot-button">
+<!-- <div id="chatbot-button" class="chatbot-button">
     <i class="fas fa-comments"></i>
 </div>
 
@@ -86,7 +88,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 </body>
 </html>
