frontend phase 1 complete

--- a/blog.html
+++ b/blog.html
@@ -22,26 +22,16 @@
     <div id="menu-btn" class="fas fa-bars"></div>
 </header>
 
-<section class="home" id="home">
-    <div class="content">
-        <h3>AI-powered Heart Attack Detection</h3>
-        <p>Upload your ECG data and let our AI model analyze it for early heart attack detection.</p>
-        <a href="#upload" class="btn"> Try Now <span class="fas fa-chevron-right"></span> </a>
-    </div>
-    <div class="image">
-        <img src="image/heart.png" alt="">
-    </div>
-</section>
-
+<!--  blog section start -->
 <section class="blogs" id="blogs">
 
-    <h1 class="heading"> <span>Heart Attack & Symptoms</span> </h1>
+    <h1 class="heading"> our <span>blogs</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
             <div class="image">
-                <img src="image/newsimg1.jpg" alt="">
+                <img src="image/blog1.jpg" alt="">
             </div>
             <div class="content">
                 <div class="icon">
@@ -49,15 +39,15 @@
                     <a href="#"> <i class="fas fa-user"></i> by admin </a>
                 </div>
                 <h3> Recognizing the Warning Signs of a Heart Attack</h3>
-                <p>A heart attack, or myocardial infarction, occurs when blood flow to a part of the heart muscle is blocked. Recognizing the early warning signs such as chest pain, shortness of breath, and nausea can save lives. Early intervention is key in improving survival rates and outcomes.</p>
+                <p>A heart attack occurs when blood flow to part of the heart muscle is blocked. Recognizing the early warning signs such as chest pain, shortness of breath, and nausea can save lives. Immediate action can significantly reduce damage and improve survival rates.</p>
                 <p><strong>Source:</strong> American Heart Association, <a href="https://www.heart.org/en/health-topics/heart-attack" target="_blank">Heart Attack Symptoms and Diagnosis</a></p>
-                <a href="https://www.heart.org/en/health-topics/heart-attack" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+                <a href="https://www.heart.org/en/health-topics/heart-attack" class="btn" target="_blank"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="image/newsimg2.jpg" alt="">
+                <img src="image/blog2.webp" alt="">
             </div>
             <div class="content">
                 <div class="icon">
@@ -65,15 +55,15 @@
                     <a href="#"> <i class="fas fa-user"></i> by admin </a>
                 </div>
                 <h3> Understanding the Symptoms of a Heart Attack</h3>
-                <p>Heart attack symptoms vary for each person, but common signs include discomfort or pressure in the chest, pain radiating down the arm, and sweating. Women may also experience nausea, lightheadedness, and unusual fatigue. Knowing these symptoms can lead to quicker medical intervention and save lives.</p>
+                <p>Heart attack symptoms vary for each person, but common signs include discomfort or pressure in the chest, pain radiating down the arm, and sweating. Women may also experience nausea, lightheadedness, and unusual fatigue. Early recognition and seeking help can save lives.</p>
                 <p><strong>Source:</strong> Mayo Clinic, <a href="https://www.mayoclinic.org/diseases-conditions/heart-attack/symptoms-causes/syc-20350456" target="_blank">Heart Attack Symptoms and Causes</a></p>
-                <a href="https://www.mayoclinic.org/diseases-conditions/heart-attack/symptoms-causes/syc-20350456" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+                <a href="https://www.mayoclinic.org/diseases-conditions/heart-attack/symptoms-causes/syc-20350456" class="btn" target="_blank"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="image/newsimg3.jpg" alt="">
+                <img src="image/blog3.gif" alt="">
             </div>
             <div class="content">
                 <div class="icon">
@@ -81,16 +71,16 @@
                     <a href="#"> <i class="fas fa-user"></i> by admin </a>
                 </div>
                 <h3> What to Do If You Suspect a Heart Attack</h3>
-                <p>If you or someone nearby shows signs of a heart attack, acting quickly is essential. Call emergency services immediately, chew aspirin if recommended, and stay calm while waiting for medical assistance. Prompt treatment can significantly reduce the damage caused by a heart attack.</p>
+                <p>If you suspect a heart attack, quick action is critical. Call emergency services immediately, chew aspirin if advised, and stay calm while waiting for help. These steps can minimize damage to the heart and improve the chances of survival.</p>
                 <p><strong>Source:</strong> National Heart, Lung, and Blood Institute, <a href="https://www.nhlbi.nih.gov/health/heart-attack" target="_blank">What to Do if You Have a Heart Attack</a></p>
-                <a href="https://www.nhlbi.nih.gov/health/heart-attack" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+                <a href="https://www.nhlbi.nih.gov/health/heart-attack" class="btn" target="_blank"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
 
     </div>
 
 </section>
-
+<!--  blog section end -->
 
 <footer class="footer">
     <div class="box-container">
@@ -122,5 +112,6 @@
     </div>
     <p>&copy; 2025 HeartGuard AI. All Rights Reserved.</p>
 </footer>
+
 </body>
 </html>
